"PostRepository class code refactoring"